bk_ida/gccida/c1/expand_twoval_binop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2388:27: error: unknown type name 'optab_0'; did you mean 'optab'?
int  expand_twoval_binop( optab_0 binoptab, rtx op0, rtx op1, rtx targ0, rtx targ1, int unsignedp) 
                          ^~~~~~~
                          optab
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2402:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2403:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2405:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2408:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2409:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2420:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode x; // [rsp+20h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2447:20: error: use of undeclared identifier 'machine_mode'
v11 = force_reg( ( machine_mode)v10, v11); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2455:20: error: use of undeclared identifier 'machine_mode'
v12 = force_reg( ( machine_mode)v10, v12); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2460:22: error: use of undeclared identifier 'machine_mode'
v17 = gen_reg_rtx( ( machine_mode)v10); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2465:22: error: use of undeclared identifier 'machine_mode'
v18 = gen_reg_rtx( ( machine_mode)v10); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2473:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2508:39: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( operand0, ( machine_mode)v10) || !operand[3].predicate( to, ( machine_mode)v10) ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2508:89: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( operand0, ( machine_mode)v10) || !operand[3].predicate( to, ( machine_mode)v10) ) 
                                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2510:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v29 = insn_data_0[v47].genfun( operand0, operand1); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2510:30: error: called object type '<dependent type>' is not a function or function pointer
v29 = insn_data_0[v47].genfun( operand0, operand1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2518:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = mode_class_0[v10]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2529:22: error: use of undeclared identifier 'machine_mode'
v35 = gen_reg_rtx( ( machine_mode)i); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/optabs.c:2530:22: error: use of undeclared identifier 'machine_mode'
v39 = gen_reg_rtx( ( machine_mode)v34); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_twoval_binop/src/obj/optabs.o] Error 1
